tests/ui/missing_poll.stderr
error: cannot find attribute `tokio_select` in this scope
 --> tests/ui/missing_poll.rs:6:7
  |
6 |     #[tokio_select]
  |       ^^^^^^^^^^^^
  |
note: `tokio_select` is imported here, but it is a function-like macro
 --> tests/ui/missing_poll.rs:3:5
  |
3 | use better_tokio_select::tokio_select;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find value `invalid` in this scope
 --> tests/ui/missing_poll.rs:8:18
  |
8 |         _ | _ => invalid,
  |                  ^^^^^^^ not found in this scope
